[tool.poetry]
name = "mc-controller-api"
version = "0.2.0"
description = ""
authors = ["derek-strasters <paracite.org@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.76.0"
uvicorn = "^0.17.6"
docker = "^5.0.3"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

