[tool.poetry]
name = "mc-controller-api"
version = "0.2.0"
description = ""
authors = ["derek-strasters <paracite.org@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "*"
uvicorn = "*"
docker = "*"
tomli = "*"

[tool.poetry.dev-dependencies]
pre-commit = "*"
black = "*"
pydocstyle = "*"
pytest = "*"
mypy = "*"
coverage = "*"
isort = "*"

flake8 = "*"
flake8-black = "*"
flake8-coding = "*"
flake8-commas = "*"
flake8-isort = "*"
flake8-import-order = "*"
flake8-quotes = "*"
flake9 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target_version = ["py310"]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
statistics = true
inline-quotes = "double"
multiline-quotes = "double"
no-accept-encodings = true
import-order-style = "pep8"
exclude = "venv, dist"
max-line-length = 120
extend-ignore = "E203" # see https://github.com/PyCQA/pycodestyle/issues/373

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.pydocstyle]
match-dir = "(?!venv|dist).*"

[tool.mypy]
ignore_missing_imports = true
plugins = 'pydantic.mypy'
